# NBA-Injury-Report

./: .gitignore  README.md  app.py  index.html  injury_report_dashboard.py  package-lock.json  package.json  pyproject.toml  requirements.txt  validate_injury_report_csv.py
.github/workflows/: ci.yml
api/: injury-report.js
assets/: styles.css
assets/player_headshots/: player_name_map.json
data/: Injury-Report_2026-02-08_03_30PM.csv  Injury-Report_2026-02-08_06_15PM.csv  Injury-Report_2026-02-08_06_30PM.csv
scripts/assets/: sync_nba_assets.py  sync_player_headshots.py
src/: styles.css
tests/: test_dashboard_time_logic.py  test_player_headshot_lookup.py  test_sync_nba_assets.py  test_validate_injury_report_csv.py
