[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "injury-report-dashboard"
version = "0.1.0"
description = "Production-ready NBA injury report scraper and dashboard."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Lucas Berry" },
]
dependencies = [
  "beautifulsoup4==4.12.3",
  "dash==2.15.0",
  "nba_api==1.11.3",
  "pandas==2.2.2",
  "pdfplumber==0.10.3",
  "requests==2.32.5",
]

[tool.uv]
package = false
